@@ -1,5 +1,11 @@
 package com.uol.finalproject.edulearn.config;
 
+import com.google.api.client.googleapis.auth.oauth2.GoogleIdTokenVerifier;
+import com.uol.finalproject.edulearn.filters.AuthTokenFilter;
+import com.uol.finalproject.edulearn.services.impl.DefaultJwtValidator;
+import com.uol.finalproject.edulearn.services.impl.GoogleJwtValidator;
+import com.uol.finalproject.edulearn.util.JwtUtils;
+import lombok.RequiredArgsConstructor;
 import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -7,44 +13,67 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 
 import static jakarta.servlet.DispatcherType.ERROR;
 import static jakarta.servlet.DispatcherType.FORWARD;
 
 @EnableWebSecurity
 @Configuration
+@RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final String[] ELECTION_OPEN_APIS = new String[] {
-            "/api/auth/login", "/api/auth/register"
+    private final JwtUtils jwtUtils;
+    private final UserDetailsService userDetailService;
+    private final GoogleIdTokenVerifier googleIdTokenVerifier;
+    private final DefaultJwtValidator defaultJwtValidator;
+    private final GoogleJwtValidator googleJwtValidator;
 
+    private final String[] APPLICATION_OPEN_APIS = new String[] {
+            "/api/auth/login", "/api/auth/register"
+    };
+    private static final String[] AUTH_WHITELIST = {
+            "/swagger-resources/**",
+            "/swagger-ui.html",
+            "/v2/api-docs",
+            "/webjars/**"
     };
 
     @Bean
-    protected SecurityFilterChain configure(HttpSecurity http) throws Exception {
+    protected SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
-        http.cors(c -> c.disable()).authorizeHttpRequests(auth ->
+        http.cors(c -> c.disable())
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth ->
                 auth.dispatcherTypeMatchers(FORWARD, ERROR).permitAll()
-                        .requestMatchers(ELECTION_OPEN_APIS).permitAll()
+                        .requestMatchers(APPLICATION_OPEN_APIS).permitAll()
                         .requestMatchers("/**").permitAll()
+                        .requestMatchers("/swagger-ui/**").permitAll()
                         .anyRequest().authenticated()
         ).csrf(c -> c.disable());
+        http.addFilterBefore(authJwtTokenFilter(), UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
         return authConfig.getAuthenticationManager();
+    }
+
+    @Bean
+    public AuthTokenFilter authJwtTokenFilter() {
+        return new AuthTokenFilter(jwtUtils, userDetailService, googleIdTokenVerifier, defaultJwtValidator, googleJwtValidator);
     }
 
     @Bean
@@ -56,9 +85,11 @@ public class SecurityConfig {
     protected FilterRegistrationBean corsConfigurationSource() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000/"));
-        config.addAllowedHeader("*");
-        config.addAllowedMethod("*");
+        config.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
+        config.addExposedHeader("sign-in-mode");
+        config.addExposedHeader("Authorization");
+        config.setAllowedHeaders(Collections.singletonList("*"));
+        config.setAllowedMethods(Arrays.asList("*"));
         config.setAllowCredentials(true);
         source.registerCorsConfiguration("/**", config);
         FilterRegistrationBean bean = new FilterRegistrationBean(new CorsFilter(source));
